clusters/managed/llm/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: mgd-llm
spec:
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: 8080
